# dopingflow

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  input.toml  input_file.html  installation_and_usage.html  objects.inv  py-modindex.html  pyproject.toml  required_inputs.html  requirements.txt  search.html  searchindex.js  workflow_overview.html
.doctrees/: environment.pickle  index.doctree  input_file.doctree  installation_and_usage.doctree  required_inputs.doctree  workflow_overview.doctree
.doctrees/api/: dopingflow.doctree  modules.doctree
.doctrees/examples/: enumerate_screening.doctree  explicit_batch.doctree  explicit_single.doctree  explicit_single_oxides.doctree  smoke_test.doctree
.doctrees/methods/: bandgap.doctree  database.doctree  filtering.doctree  formation_energy.doctree  generation.doctree  references.doctree  relaxation.doctree  scanning.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt  input_file.rst.txt  required_inputs.rst.txt  workflow_overview.rst.txt
_sources/api/: dopingflow.rst.txt  modules.rst.txt
_sources/examples/: enumerate_screening.rst.txt  explicit_batch.rst.txt  explicit_single.rst.txt  smoke_test.rst.txt
_sources/methods/: database.rst.txt  formation_energy.rst.txt  generation.rst.txt  references.rst.txt  relaxation.rst.txt  scanning.rst.txt
api/: dopingflow.html  modules.html
docs/source/: conf.py  index.rst  input_file.rst  installation_and_usage.rst  required_inputs.rst
examples/: enumerate_screening.html  explicit_batch.html  explicit_single.html  explicit_single_oxides.html  smoke_test.html
examples/enumerate_screening/: README.md  input.toml
examples/explicit_batch/: README.md  input.toml
examples/explicit_single_composition/: README.md  input.toml
examples/explicit_single_composition_oxide_reference/: README.md
examples/smoke_test/: README.md  input.toml
gui/: README.md  app.py  gui_config.py  io_project.py  view_structure.py
methods/: bandgap.html  database.html  filtering.html  formation_energy.html  generation.html  references.html  relaxation.html  scanning.html
src/dopingflow/: cli.py  (+13 more)
tests/: test_cli.py  test_cli_help.py  test_generate_minimal.py  test_imports.py
(+16 files in other folders)
